@@ -1,3 +1,8 @@
+2001-12-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* config-client.ht: Replace `tmda-dated-address' references with
+	`tmda-make-address -d'.
+
 2001-12-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* requirements.ht (Links): Recommend Python >= 2.2.
